--- a/src/InterventionService.Api/appsettings.Development.json
+++ b/src/InterventionService.Api/appsettings.Development.json
@@ -7,5 +7,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ExternalServices": {
+    "StockApi": "http://localhost:5005"
   }
 }
